# mimu

./: .gitignore  CONTRIBUTING.md  README.md  neutralino.config.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: desktop-linux.yml  desktop-macos.yml  desktop-windows.yml  linux-ci.yml
client/: build.mjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/scripts/: copy-node.mjs  tauri-run.mjs
client/src/: App.tsx  globals.d.ts  i18n.ts  index.css  main.tsx  theme.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: main.rs
client/src/assets/en-croissant-pieces/: ATTRIBUTION.md
client/src/components/Analysis/: GameAnalysisPanel.tsx
client/src/components/Chessboard/: ChessboardPanel.tsx  pieceSets.tsx
client/src/context/: SettingsContext.tsx  ThemeContext.tsx
client/src/hooks/: useSocket.ts
client/src/i18n/: en.ts  es.ts  zh-CN.ts
client/src/lib/: desktopConfig.ts  enCroissantPieceData.ts  gameHistoryStorage.ts  moveSounds.ts  pieceSetCatalog.ts  server.ts
scripts/: desktop-launcher.ts  package-desktop-server.mjs  prepare-desktop-assets.mjs
server/: engines.json  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/analysis/: AnalysisManager.ts
server/src/config/: SettingsStore.ts  appPaths.ts
server/src/engine/: EngineManager.ts  UCIEngine.ts
server/src/game/: GameManager.ts  MatchRunner.ts
server/src/history/: HistoryStore.ts
server/src/utils/: pgn.ts
(+14 files in other folders)
